# QueueingSystem

./: .gitignore  CMakeLists.txt  SMO_QT.pro  bid.cpp  bid.h  buffer.cpp  buffer.h  controller.cpp  controller.h  device.cpp  device.h  devicescontroller.cpp  devicescontroller.h  director.cpp  director.h  layer.cpp  layer.h  main.cpp  mainwindow.ui  modelcurrentstate.cpp  modelcurrentstate.h  modelcurrentstate.ui  randomhelper.cpp  resulttable.cpp  resulttable.h  resulttable.ui  source.cpp  source.h  sourcescontroller.cpp  sourcescontroller.h
src/: bid.cpp  bid.h  buffer.cpp  buffer.h  controller.cpp  controller.h  device.cpp  device.h  device.h.autosave  devicecontroller.cpp  devicecontroller.h  devicecontroller.h.autosave  devicescontroller.cpp  devicescontroller.cpp.autosave  devicescontroller.h  director.cpp  director.h  layer.cpp  layer.h  main.cpp  popoutmanager.cpp  popoutmanager.h  putinmanager.cpp  putinmanager.h  randomhelper.cpp  randomhelper.h  source.cpp  source.h  sourcecontroller.cpp  sourcecontroller.h  sourcescontroller.cpp  sourcescontroller.h  timeable.cpp  timeable.h
src/controllers/: devicescontroller.cpp  devicescontroller.h  sourcescontroller.cpp  sourcescontroller.h
src/forms/: mainwindow.ui
src/timeableClasses/: bid.cpp  controller.cpp  controller.h  device.cpp  device.h  director.cpp  director.h  source.cpp  source.h  timeable.cpp  timeable.h
src/ui/: mainwidget.cpp  mainwidget.cpp.autosave  mainwidget.h  tabsmowidget.cpp  tabsmowidget.h  tabtablewidget.cpp  tabtablewidget.h
src/utils/: bitcounter.cpp  bitcounter.h  randomhelper.h
test/: buffer_test.cpp  device_controller_test.cpp  layer_test.cpp  randomHelper_test.cpp  source_controller_test.cpp  source_test.cpp  test2.cpp
